   * Display the name of the add-on in the "Add-on installed" dialog
   * The unknown unit icon used in status table is now team colored
   * In multiplayer lobby, all unit's images are now team colored.
   * In help, with debug mode, broken hyperlinks are now visible in red and
     when clicked open a error message showing the bad topic reference.
   * new debug command feature, ":next_level Some_Id" to directly go to
     scenario having id=Some_Id. Also allow to go backwards in campaign. 
 * multiplayer:
   * Added support for multiple sides per client in MP start
   * Added support for reserving slots when reloading game
   * Fixed timer end warning not to play in opponents turn (bug: #11517)
   * Teams are now translated localy for all clients (bug: #3676)
   * Fix an old pathfinding bug causing a inconsistency between the path used
     and the one showed to others players. It was only a visual error, but
     sometimes caused to see a enemy pass through your invisible units (or in
     their ZoC). Now all players see the same real path. Also valid for replay.
   * When joining a game, display your assigned starting position and the new
     team coloring also shows your assigned color.
 * miscellaneous and bug fixes:
   * Fixed droiding not to make wesnoth think player is observer (bug: #9675)
   * Fixed statitics not add turn data from previus scenarios (bug: #11719)
   * Fixed manager to initialize before gamestate in playcontroller (bug: 11935)
   * Removed persistance from team configuration (bug: #10916)
   * Fixed text parser again strip cr from configs. Added CR and 254 to be
     escaped in campaign upload. All UMC has to be reuploaded to server
   * Made automaticaly generated macro reference easier to naviagate and link to
     (patch: #1076)
   * Allow [unit_type] num_traits=0 to override race's num_traits.
   * Small optimization of scrolling and things out of their hexes.