@@ -54,8 +54,9 @@ Version 1.5.1+svn:
    * In multiplayer lobby, all unit's images are now team colored.
    * In help, with debug mode, broken hyperlinks are now visible in red and
      when clicked open a error message showing the bad topic reference.
+   * new debug command ":choose_level" or ":cn" to directly go to a scenario.
    * new debug command feature, ":next_level Some_Id" to directly go to
-     scenario having id=Some_Id. Also allow to go backwards in campaign. 
+     scenario having id=Some_Id.
  * multiplayer:
    * Added support for multiple sides per client in MP start
    * Added support for reserving slots when reloading game
